[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Menu/MenuTheme.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Menu/Freedom-10eM.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MenuTheme" type="Sprite" parent="."]
position = Vector2( 360, 184 )
scale = Vector2( 0.405029, 0.329427 )
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 191.0
margin_right = 450.0
margin_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 259.0
margin_bottom = 360.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 259.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 3 )
text = "Omni Key"
align = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 259.0
margin_bottom = 184.0
theme = SubResource( 2 )
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 167.0
margin_right = 259.0
margin_bottom = 187.0
text = "Options"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 259.0
margin_bottom = 208.0
text = "Credits"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 212.0
margin_right = 259.0
margin_bottom = 232.0
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
